--- a/serverless/aws-flask-ltbxd/serverless.yml
+++ b/serverless/aws-flask-ltbxd/serverless.yml
@@ -20,6 +20,7 @@ provider:
 functions:
   api:
     handler: app.ScrapeLetterboxdFavourites
+    timeout: 30
     events:
       - http:
           path: /ScrapeLetterboxdFavourites
